--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "core-js": "^3.6.5",
+    "material-design-icons": "^3.0.1",
+    "materialize-css": "^1.0.0-rc.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
