--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "material-design-icons": "^3.0.1",
     "materialize-css": "^1.0.0-rc.2",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vue2-filters": "^0.13.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
