--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "core-js": "^3.6.5",
+    "epic-spinners": "^1.1.0",
     "material-design-icons": "^3.0.1",
     "materialize-css": "^1.0.0-rc.2",
     "vue": "^2.6.11",
+    "vue-loading-overlay": "^3.4.2",
     "vue-router": "^3.2.0",
+    "vue-spinner": "^1.0.4",
     "vue2-filters": "^0.13.0"
   },
   "devDependencies": {
@@ -27,7 +30,9 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^6.0.1",
     "prettier": "^2.2.1",
+    "sass-loader": "^12.1.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
